# MajorProject

./: .gitignore  README.md
Agent/: .gitignore  CMakeLists.txt  CMakeSettings.json  Makefile  README.md
Agent/Agent/: .gitignore  CMakeLists.txt  CMakeSettings.json
Agent/Agent/Agent/: Agent.cpp  Agent.h  CMakeLists.txt  Environment.cpp  Environment.h  GameAgent.cpp  GameAgent.h  Main.cpp  Reward.cpp  Reward.h  State.h
Agent/Agent/Agent/Environment/: Environment.cpp  Environment.h  State.cpp  State.h
Agent/Agent/Agent/Networks/: AgentFactory.cpp  AgentFactory.h  NetworkAgent.h  NetworkParameters.h  Parameters.h
Agent/Agent/Agent/Networks/ACER/: ACERAgent.cpp  ACERAgent.h  ACERParameters.h  ActorCriticNetwork.cpp  ActorCriticNetwork.h  RandomIterator.h  ReplayMemory.cpp  ReplayMemory.h  Trajectory.h
Agent/Agent/Agent/Networks/SAC/: CriticNetwork.cpp  CriticNetwork.h  PolicyNetwork.cpp  PolicyNetwork.h  RandomIterator.h  ReplayMemory.cpp  ReplayMemory.h  SACAgent.cpp  SACAgent.h  ValueNetwork.cpp  ValueNetwork.h
Agent/Agent/Agent/Networks/TestEnvironment/: AgentTest.cpp  AgentTest.h  TestEnvironment.cpp  TestEnvironment.h
Agent/Agent/Agent/PyTorchExpansion/: TorchDistribution.cpp  TorchDistribution.h  TorchNormal.cpp  TorchNormal.h
Agent/Agent/Agent/Storage/: UtilityStorage.cpp  UtilityStorage.h
Agent/Agent/Agent/UnitTests/: EnvironmentTests.h  StateTests.h  StorageTests.h  Test.cpp
Agent/Agent/Agent/Visualizer/: Visualizer.cpp  Visualizer.h
Agent/src/: Agent.cpp  Agent.h  CMakeLists.txt  Main.cpp
Agent/src/DataManipulation/: Normalize.cpp  Normalize.h
Agent/src/Environment/: Environment.cpp  Environment.h  State.cpp  State.h
Agent/src/Networks/: AgentFactory.cpp  AgentFactory.h
Agent/src/Networks/ACER/: ACERAgent.cpp  ACERAgent.h  ActorCriticNetwork.cpp  ReplayMemory.cpp  ReplayMemory.h
Agent/src/Networks/TestEnvironment/: AgentTest.cpp  AgentTest.h  TestEnvironment.h
Agent/src/Storage/: UtilityStorage.cpp  UtilityStorage.h
Agent/src/Visualizer/: Visualizer.cpp  Visualizer.h
Agent/test/: CMakeLists.txt  EnvironmentTests.h  StateTests.h  StorageTests.h
Game/: .gitignore  CMakeLists.txt  CMakeSettings.json  Makefile  README.md
Game/include/GameAgent/: Agent.h  GameAgent.h
Game/include/GameAgent/DataManipulation/: DataManipulation.h
Game/include/GameAgent/Environment/: Environment.h  State.h
Game/include/GameAgent/Networks/: NetworkAgent.h
Game/include/GameAgent/Networks/ACER/: ACERAgent.h  ACERParameters.h  ActorCriticNetwork.h  RandomIterator.h
Game/include/GameAgent/Visualizer/: Visualizer.h
Game/lib/: GameAgent.lib  box2d.lib  entityx.lib
Game/src/: CMakeLists.txt  CScript.cpp  CScript.h  Components.h  ECS.cpp  ECS.h  EntityHelper.cpp  EntityHelper.h  Events.h  Game.cpp  Game.h  Input.cpp  Input.h  Logger.cpp  Logger.h  Main.cpp  Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h  ScriptFactory.cpp  ScriptFactory.h  Sound.cpp  Sound.h  Systems.h  cScript.cpp  cScript.h  components.h  entityHelper.cpp  entityHelper.h  events.h  input.cpp  input.h  logger.cpp  logger.h  main.cpp  physicsManager.cpp  physicsManager.h  playerPrefs.h  scene.cpp  (+9 more)
Game/src/Assets/scenes/: arena.xml  loadoutselection.xml  mainmenu.xml  test.xml
Game/src/Assets/shaders/: BasicColor.shader  DebugColor.shader
Game/src/Components/: Audio.h  RigidBody.h  Script.h  Shader.h  TempEnemyWeapons.h  TextSprite.h  Texture.h  Transform.h  active.h  audio.h  camera.h  name.h  rigidbody.h  script.h  shader.h  spriteVertices.h  textSprite.h  texture.h  transform.h
Game/src/Events/: SceneLoaded.h  sceneLoaded.h
Game/src/Physics/: ContactListener.h  PhysicsManager.cpp  contactListener.h  physicsManager.cpp  physicsManager.h
Game/src/Renderer/: B2Renderer.h  IndexBuffer.h  Shader.cpp  Shader.h  TextRenderer.cpp  TextRenderer.h  Texture.cpp  Texture.h  VertexBuffer.cpp  VertexBufferLayout.h  b2Renderer.cpp  b2Renderer.h  indexBuffer.cpp  indexBuffer.h  shader.cpp  shader.h  textRenderer.cpp  textRenderer.h  texture.cpp  texture.h  vertexArray.cpp  vertexArray.h  vertexBuffer.cpp  vertexBuffer.h  vertexBufferLayout.h
Game/src/Scripts/: EndScreenScript.cpp  EnemyScript.cpp  EnemyScript.h  LoadoutSelectionScript.cpp  MainmenuScript.cpp  MainmenuScript.h  PausemenuScript.cpp  PausemenuScript.h  PlayerScript.cpp  PlayerScript.h  endScreenScript.cpp  endScreenScript.h  enemyScript.cpp  enemyScript.h  loadoutSelectionScript.cpp  loadoutSelectionScript.h  mainmenuScript.cpp  mainmenuScript.h  pausemenuScript.cpp  pausemenuScript.h  playerScript.cpp  playerScript.h
Game/src/Systems/: AudioSystem.h  LearningAgentSystem.h  PhysicsSystem.h  RenderingSystem.h  TrainingData.cpp  TrainingData.h  audioSystem.h  physicsSystem.h  renderingSystem.h  scriptSystem.h
Game/src/WeaponScripts/: BowScript.cpp  BowScript.h  GrenadeScript.cpp  GrenadeScript.h  GunScript.cpp  GunScript.h  ShieldScript.cpp  ShieldScript.h  SwordScript.cpp  SwordScript.h  WeaponScript.h  bowScript.cpp  bowScript.h  gauntletScript.cpp  gauntletScript.h  grenadeScript.cpp  grenadeScript.h  shieldScript.cpp  shieldScript.h  swordScript.cpp  swordScript.h  weaponScript.h
Game/src/Weapons/: weapon.h
Game/test/: CMakeLists.txt  InputTests.h  PhysicsTests.h  SceneTests.h
Game/tests/: InputTests.h  PhysicsTest.h  PhysicsTests.h  SceneTests.h  Test.cpp  test.cpp
